# barn-challenge-2026

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  report_test.py  run.py
amcn/: CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
amcn/config/: mpc_params.yaml
amcn/configs/: common_costmap_params.yaml  global_costmap_params.yaml  move_base_params.yaml
amcn/launch/: move_base_amcn.launch  test_sim.launch
amcn/rviz/: move_base.rviz
amcn/scripts/: test_solver.py
amcn/src/amcn/common/: enums.py
amcn/src/amcn/optimization/: dynamic_mpc_node.py  dynamic_mpc_solver.py  mcp_node.py  mpc_solver.py  robot_model.py
amcn/src/amcn/perception/: lidar_cluster.py  obstacle_tracker.py  obstacle_tracker_node.py
amcn/src/nodes/: dynamic_mpc_node.py  lidar_clustering_node.py  mpc_node.py  optimization_node.py  perception_node.py
amcn_py/: CMakeLists.txt  package.xml  setup.py
amcn_py/configs/: common_costmap_params.yaml  mpc_params.yaml
amcn_py/launch/: move_base_amcn.launch
amcn_py/src/amcn/optimization/: dynamic_mpc_node.py  mcp_node.py  robot_model.py
amcn_py/src/amcn/perception/: lidar_cluster.py  lidar_clustering_node.py
hlsd_planner/: CMakeLists.txt  hlsd_plugin.xml
hlsd_planner/include/hlsd_local_planner/: hlsd_planner.h
hlsd_planner/launch/: move_base_HLSD.launch
hlsd_planner/src/: hlsd_planner.cpp
hlsd_training/: pyproject.toml
hlsd_training/scripts/: generate_dataset.py  generate_single_hallucination.py  generate_single_motion.py  generate_single_trajectory.py  train.py
hlsd_training/src/common/: hallucination.py  motion_type.py  robot_config.py  scenario.py  trajectory.py
hlsd_training/src/hallucination/: hallucination.py  hallucination_generator.py
hlsd_training/src/simulation/: jackal_simulator.py  motion_generator.py  robot_config.py  trajectory_generator.py
hlsd_training/src/training/: HLSDLite.py
progress/: progress.md  week0.md  week1.md
res/: 2026-01-05-mpc.txt  2026-01-06-mpc.txt
safe_mpc_planner/: CMakeLists.txt  local_planner_plugin.xml  package.xml  setup.py
safe_mpc_planner/configs/: common_costmap_params.yaml  move_base_params.yaml  mpc_params.yaml  perception_params.yaml
safe_mpc_planner/launch/: move_base_mpc.launch
safe_mpc_planner/msg/: Obstacle.msg  ObstacleArray.msg
safe_mpc_planner/python/nodes/: optimization_node.py  perception_node.py
safe_mpc_planner/python/safe_mpc_planner/optimization/: dynamic_mpc_node.py  dynamic_mpc_solver.py  mcp_node.py  mpc_node.py  mpc_solver.py
safe_mpc_planner/python/safe_mpc_planner/perception/: lidar_cluster.py  lidar_clustering_node.py  obstacle_tracker.py  obstacle_tracker_node.py  scene_classifier.py  scene_classifier_node.py
safe_mpc_planner/rviz/: move_base.rviz
