[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "amcn"
requires-python = "==3.10.19"
dependencies = [
    "pyyaml",
    "numpy",
    "casadi",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = false
