[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "hlsd_training"
requires-python = "==3.10.19"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "tqdm",
    "shapely",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
